--- a/src/public/css/userList.css
+++ b/src/public/css/userList.css
@@ -1,33 +1,56 @@
-.attendance-table {
+.heading {
+    margin: 20px 0 50;
+    text-align: center;
+}
+
+.user-table {
     width: 100%;
     border-collapse: collapse;
 }
 
-.attendance-table__row {
-    display: flex;
-    padding: 20px 30px;
-    width: 100%;
+.user-table__row {
     border-top: 1px solid #8E8E8E;
-    align-items: center;
 }
 
-.attendance-table__header {
-    width: 20%;
-    margin-right: 70px;
-    text-align: left;
+.user-table__header,
+.user-table__item  {
+    padding: 20px 30px;
     font-size: 18px;
+    text-align: left;
 }
 
-.attendance-table__item {
-    width: 20%;
-    margin-right: 70px;
+.user-table__header.id {
+    width: 150px;
+}
+.user-table__header.name {
+    width: 250px;
+}
+.user-table__header.email {
+    width: 300px;
+}
+.user-table__header.status {
+    width: 150px;
+}
+
+.user-table__item {
     font-weight: bold;
     vertical-align: middle;
 }
 
-.attendance-table__header:last-child,
-.attendance-table__item:last-child {
+.user-table__header:last-child,
+.user-table__item:last-child {
     margin-right: 0px;
+}
+
+.button {
+    display: inline-block;
+    background: #ceecd2;
+    border: 1px solid #000000;
+    border-radius: 3px;
+    font-size: 18px;
+    font-weight: bold;
+    cursor: pointer;
+    text-align: center;
 }
 
 .date-navigation {
