--- a/src/public/css/userList.css
+++ b/src/public/css/userList.css
@@ -44,7 +44,7 @@
 
 .button {
     display: inline-block;
-    background: #ceecd2;
+    background: #cacaca;
     border: 1px solid #000000;
     border-radius: 3px;
     font-size: 18px;
